# skillbox_cpp_prac_work7_lib

./: CMakeLists.txt
src/: matrix.cpp  matrix.h
src/c/: c_api.cpp  c_api.h
